[package]
name = "slinky"
version = "0.0.1"
authors = ["alapc"]
edition = "2021"
description = ""
license = ""
repository = ""

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { version = "1.5.0", features = ["stargate"] }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }
protobuf = "3.4.0"

[dev-dependencies]
cosmwasm-schema = { version = "1.5.0" }
